@@ -578,7 +578,8 @@ public abstract class TregexPattern implements Serializable  {
    * in which the node is encountered in a depth-first search starting with 1 at top node in the
    * sentence tree.
    *
-   * <li> {@code -extract <tree-file>} extracts the subtree s:n specified by <tt>code</tt> from the specified <tt>tree-file</tt>.  Overrides all other behavior of tregex.  Can't specify multiple encodings etc. yet.
+   * <li> {@code -extract <tree-file>} extracts the subtree s:n specified by <tt>code</tt> from the specified <tt>tree-file</tt>.
+   *     Overrides all other behavior of tregex.  Can't specify multiple encodings etc. yet.
    * <li> {@code -extractFile <code-file> <tree-file>} extracts every subtree specified by the subtree codes in
    *     {@code code-file}, which must appear exactly one per line, from the specified {@code tree-file}.
    *     Overrides all other behavior of tregex. Can't specify multiple encodings etc. yet.
@@ -619,6 +620,8 @@ public abstract class TregexPattern implements Serializable  {
     String reportTreeNumbers = "-n";
     String rootLabelOnly = "-u";
     String oneLine = "-s";
+    String uniqueTrees = "-q";
+
     Map<String,Integer> flagMap = Generics.newHashMap();
     flagMap.put(extractSubtreesOption,2);
     flagMap.put(extractSubtreesFileOption,2);
@@ -642,6 +645,7 @@ public abstract class TregexPattern implements Serializable  {
     flagMap.put(reportTreeNumbers, 0);
     flagMap.put(rootLabelOnly, 0);
     flagMap.put(oneLine, 0);
+    flagMap.put(uniqueTrees, 0);
     Map<String, String[]> argsMap = StringUtils.argsToMap(args, flagMap);
     args = argsMap.get(null);
 
@@ -726,6 +730,9 @@ public abstract class TregexPattern implements Serializable  {
     } else {
       treePrintFormats.append("penn,");
     }
+    if (argsMap.containsKey(uniqueTrees)) {
+      TRegexTreeVisitor.printOnlyUniqueTrees = true;
+    }
 
     HeadFinder hf = new CollinsHeadFinder();
     if(headFinderClassName != null) {
@@ -794,8 +801,8 @@ public abstract class TregexPattern implements Serializable  {
     TreeReaderFactory trf = new TRegexTreeReaderFactory();
     if (treeReaderFactoryClassName != null) {
       try {
-        trf = (TreeReaderFactory) Class.forName(treeReaderFactoryClassName).newInstance();
-      } catch(Exception e) {
+        trf = (TreeReaderFactory) Class.forName(treeReaderFactoryClassName).getDeclaredConstructor().newInstance();
+      } catch (Exception e) {
         throw new RuntimeException("Error occurred while constructing TreeReaderFactory: " + e);
       }
     }
@@ -819,6 +826,7 @@ public abstract class TregexPattern implements Serializable  {
     static boolean printFilename = false;
     static boolean oneMatchPerRootNode = false;
     static boolean reportTreeNumbers = false;
+    static boolean printOnlyUniqueTrees = false;
 
     static TreePrint tp;
     private PrintWriter pw;
@@ -904,6 +912,10 @@ public abstract class TregexPattern implements Serializable  {
           }
           // pw.println();  // TreePrint already puts a blank line in
         } // end if (printMatches)
+
+        if (printOnlyUniqueTrees) {
+          break;
+        }
       } // end while match.find()
     } // end visitTree
 
@@ -920,9 +932,7 @@ public abstract class TregexPattern implements Serializable  {
 
     public TRegexTreeReaderFactory() {
       this(new TreeNormalizer() {
-        /**
-         *
-         */
+
         private static final long serialVersionUID = -2998972954089638189L;
 
         @Override
